--- a/myApp/src/app/carousel/carousel.component.html
+++ b/myApp/src/app/carousel/carousel.component.html
@@ -1,30 +1,26 @@
-<div class="carousel slide" data-ride="carousel">
-  <!--轮播图导航区域-->
+<div id="carouselAuctionIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
-    <li class="active"></li>
-    <li></li>
-    <li></li>
+    <li data-target="#carouselAuctionIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselAuctionIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselAuctionIndicators" data-slide-to="2"></li>
   </ol>
-  <!--/轮播图导航区域-->
-  <!--轮播图片区域-->
   <div class="carousel-inner">
-    <div class="item active">
-      <img src="http://placehold.it/800x300" alt="carousel" class="slide-image">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="http://placehold.it/800x300" alt="First slide">
     </div>
-    <!--<div class="item">-->
-      <!--<img src="http://placehold.it/800x300" alt="carousel" class="slide-image">-->
-    <!--</div>-->
-    <!--<div class="item">-->
-      <!--<img src="http://placehold.it/800x300" alt="carousel" class="slide-image">-->
-    <!--</div>-->
+    <div class="carousel-item">
+      <img class="d-block w-100" src="http://placehold.it/800x300" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="http://placehold.it/800x300" alt="Third slide">
+    </div>
   </div>
-  <!--/轮播图片区域-->
-  <!--轮播图控制按钮-->
-  <a href="javascript:$('.carousel').carousel('prev')" class="left carousel-control">
-    <i class="glyphicon glyphicon-chevron-left"></i>
+  <a class="carousel-control-prev" href="#carouselAuctionIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
   </a>
-  <a href="javascript:$('.carousel').carousel('next')" class="right carousel-control">
-    <i class="glyphicon glyphicon-chevron-right"></i>
+  <a class="carousel-control-next" href="#carouselAuctionIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
   </a>
-  <!--/轮播图控制按钮-->
 </div>
