--- a/myApp/src/app/navbar/navbar.component.html
+++ b/myApp/src/app/navbar/navbar.component.html
@@ -1,24 +1,23 @@
-<nav class="navbar navbar-inverse navbar-fixed">
-  <!--导航条内容容器-->
-  <div class="container">
-    <!--导航条头部-->
-    <div class="navbar-header">
-      <button class="navbar-toggle btn" data-toggle="collapse" data-target="#navbar-collapse-menu">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <!--//商标/Logo-->
-      <a class="navbar-brand" href="javascript:void(0)">在线竞拍</a>
-    </div>
-    <!--/导航条头部-->
-    <!--导航条列表菜单-->
-    <div class="collapse navbar-collapse" id="navbar-collapse-menu">
-      <ul class="nav navbar-nav">
-        <li><a href="javascript:void(0)">关于我们</a></li>
-        <li><a href="javascript:void(0)">联系我们</a></li>
-        <li><a href="javascript:void(0)">网站地图</a></li>
+<nav class="navbar navbar-dark bg-dark fixed-top">
+    <a class="navbar-brand" routerLink="/home">在线竞拍</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" routerLink="about">关于我们 <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" routerLink="contact">联系我们</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" routerLink="ourmap">网站地图</a>
+        </li>
+        <li class="nav-item active">
+            <a class="nav-link" routerLink="itemlist">产品列表</a>
+          </li>
       </ul>
     </div>
-  </div>
-</nav>
+  </nav>
+
