--- a/myApp/src/app/product/product.component.html
+++ b/myApp/src/app/product/product.component.html
@@ -1,9 +1,9 @@
 <div class="container productList">
   <div class="row">
     <div class="col-md-4 col-sm-4 col-lg-4" *ngFor="let product of products">
-      <div class="thumbnail">
-        <img src="http://placehold.it/210x150" alt="商品图片">
-        <h4 class="pull-right">￥{{product.price}}</h4>
+      <div class="img-thumbnail">
+        <img [src]="imgUrl" alt="商品图片">
+        <h4 class="float-right">￥{{product.price}}</h4>
         <h4><a>{{product.title}}</a></h4>
         <p>{{product.desc}}</p>
         <div>
