--- a/myApp/src/app/ourmap/ourmap.component.html
+++ b/myApp/src/app/ourmap/ourmap.component.html
@@ -1,3 +1,7 @@
-<p>
-  ourmap works!
-</p>
+<h4>
+  This is a world MAP!
+  Click <a [routerLink]="['./detail']">here</a> to check the details!
+</h4>
+<router-outlet></router-outlet>
+
+
