--- a/myApp/src/app/home/home.component.html
+++ b/myApp/src/app/home/home.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
+<router-outlet></router-outlet>
 <div class="main-wrap">
   <div class="container">
     <div class="row">
