--- a/myApp/src/app/item-list/item-list.component.html
+++ b/myApp/src/app/item-list/item-list.component.html
@@ -2,7 +2,12 @@
   <div class="row">
     <div class="col-md-8">
       <h4>Product List</h4>
-        <table class="table" *ngFor="let item of Items">
+      <div class="form-group">
+        <label for="searchInput">SEARCH:</label>
+        <input type="text" class="form-control" id="searchInput" name="search" 
+        placeholder="product name" [(ngModel)]="term">
+      </div>
+        <table class="table">
             <thead class="thead-light">
               <tr>
                 <th scope="col">Product ID</th>
@@ -10,15 +15,17 @@
                 <th scope="col">Product Inventory</th>
                 <th scope="col">Product Price</th>
                 <th scope="col">Product Category</th>
+                <th scope="col">Status</th>
               </tr>
             </thead>
-            <tbody>
+            <tbody *ngFor="let item of items | filter:term">
               <tr>
                 <td>{{item.id}}</td>
                 <td>{{item.name}}</td>
                 <td>{{item.inventory}}</td>
                 <td>{{item.price}}</td>
                 <td>{{item.category}}</td>
+                <div style="margin-top:9px"><button (click)= "clearData()" class="btn btn-sm">DELETE</button></div>
               </tr>
             </tbody>
           </table>
@@ -27,27 +34,32 @@
       <h4>Add new items here</h4>
         <form>
             <div class="form-group">
-              <label for="formGroupExampleInput">Product Name</label>
-              <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
+              <label for="formGroupNameInput">Product Name</label>
+              <input type="text" class="form-control" id="formGroupnameInput" placeholder="name" name="name" [(ngModel)]="item.name">
             </div>
             <div class="form-group">
-              <label for="formGroupExampleInput2">Product Inventory</label>
-              <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
+              <label for="formGroupIdInput">ID</label>
+              <input type="number" class="form-control" id="formGroupidInput" placeholder="ID" name="id" [(ngModel)]="item.id">
             </div>
             <div class="form-group">
-                <label for="formGroupExampleInput2">Product Price</label>
-                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
+              <label for="formGroupInventory">Product Inventory</label>
+              <input type="text" class="form-control" id="formGroupInventory" placeholder="Inventory" name="inventory" [(ngModel)]="item.inventory">
             </div>
             <div class="form-group">
-                <label for="formGroupExampleInput2">Product Category</label>
-                <select type="text" class="form-control" id="formGroupExampleInput2">
-                  <option value="china">china</option>
-                  <option value="painting">painting</option>
-                  <option value="crafts">crafts</option>
-                  <option value="gear">gear</option>
+                <label for="formGroupPrice">Product Price</label>
+                <input type="number" class="form-control" id="formGroupPrice" placeholder="Price" name="price" [(ngModel)]="item.price">
+            </div>
+            <div class="form-group">
+                <label for="formGroupCategory">Product Category</label>
+                <select type="text" class="form-control" id="formGroupCategory" name="category" [(ngModel)]="item.category">
+                  <option>-choose-</option>
+                  <option>china</option>
+                  <option>painting</option>
+                  <option>crafts</option>
+                  <option>gear</option>
                 </select>
           </div>
-          <button class="btn btn-primary btn-block">Add to List</button>
+          <button class="btn btn-primary btn-block" (click)="addData()">Add to List</button>
         </form>
     </div>
   </div>
