--- a/myApp/src/app/home/home.component.html
+++ b/myApp/src/app/home/home.component.html
@@ -3,10 +3,11 @@
 <div class="main-wrap">
   <div class="container">
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-lg-3">
         <app-search></app-search>
+        <router-outlet name="aux"></router-outlet>
       </div>
-      <div class="col-md-9">
+      <div class="col-lg-9">
         <div class="row">
           <app-carousel></app-carousel>
         </div>
