--- a/myApp/src/app/chat/chat.component.html
+++ b/myApp/src/app/chat/chat.component.html
@@ -1,2 +1,5 @@
-<a [routerLink]="[{outlets:{aux:'./chat'}}]">Live chat</a>
-<a [routerLink]="[{outlets:{aux:null}}]">hide the chat</a>
+<div class="form-group chatInput">
+        <label for="chatBox">chat box:</label>
+        <textarea name="chatBox" rows="3" placeholder="type here"></textarea>
+</div>
+
