--- a/myApp/src/app/mapdetail/mapdetail.component.html
+++ b/myApp/src/app/mapdetail/mapdetail.component.html
@@ -1,3 +1,4 @@
 <p>
-  The is a detailed map for the world MAP!
+  你买了{{childStock}}股票。一共{{childAmout}}张。
 </p>
+<p>now time is {{birthday|date:"yyyy-MM-dd HH:mm:ss"}}</p>
