--- a/myApp/src/app/navbar/navbar.component.html
+++ b/myApp/src/app/navbar/navbar.component.html
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-dark bg-dark fixed-top">
+<div class="navBarMargin">
+  <nav class="navbar navbar-dark bg-dark fixed-top">
     <a class="navbar-brand" routerLink="/home">在线竞拍</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -6,18 +7,22 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" routerLink="about">关于我们 <span class="sr-only">(current)</span></a>
+          <a class="nav-link" [routerLink]= "['home/about']">关于我们 <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" routerLink="contact">联系我们</a>
+          <a class="nav-link" [routerLink]="['home/contact']">联系我们</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" routerLink="ourmap">网站地图</a>
+          <a class="nav-link" [routerLink]="['home/ourmap']">网站地图</a>
         </li>
         <li class="nav-item active">
-            <a class="nav-link" routerLink="itemlist">产品列表</a>
+            <a class="nav-link" [routerLink]="['home/itemlist']">产品列表</a>
+          </li>
+          <li class="nav-item active">
+              <a class="nav-link" [routerLink]="['home/login']">login</a>
           </li>
       </ul>
     </div>
   </nav>
+</div>
 
